fix: github star button alignment

--- a/app/src/layouts/DashboardLayout/MenuHeader/MenuHeader.css
+++ b/app/src/layouts/DashboardLayout/MenuHeader/MenuHeader.css
@@ -145,6 +145,11 @@
   margin-left: 16px;
 }
 
+.github-star-button {
+  display: block;
+  max-height: 45px;
+}
+
 .github-star-button > span {
   display: flex;
   align-items: center;
